--- a/contact-me/contact-me.css
+++ b/contact-me/contact-me.css
@@ -31,6 +31,10 @@ a {
     flex-direction: column;
     justify-content: center;
     overflow-y: scroll;
+    /* IE and Edge */
+    -ms-overflow-style: none;
+    /* Firefox */
+    scrollbar-width: none;
     align-items: center;
     line-height: 1.7rem;
     text-align: center;
@@ -39,6 +43,10 @@ a {
 .contact-me-wrapper {
     padding: 1rem;
     overflow-y: scroll;
+    /* IE and Edge */
+    -ms-overflow-style: none;
+    /* Firefox */
+    scrollbar-width: none;
 }
 
 .contact-form-wrapper {
